sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:16: error: not found: value ec
  }while (ec)
          ^